--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "firebase": "^9.8.4",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-safe-area-context": "^4.3.1",
